--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -129,7 +129,8 @@ header {
   width: 100%;
   background-color: #ff9fcf; /* soft gray-blue tone */
   color: #000000; /* black text */
-  height: 20px; /* thin height */
+  height: 28px; /* thin height */
+  
   display: flex;
   align-items: center;
   justify-content: center;
@@ -140,10 +141,12 @@ header {
 
 /* Banner Text */
 .scrolling-text {
-  font-size: 14px;
+  font-size: 19px;
   font-weight: 600;
-  letter-spacing: 3px;
+  letter-spacing: 7px;
   text-transform: uppercase;
+  margin-top:4px;
+  
 }
 
 /* Desktop adjustments */
@@ -153,7 +156,7 @@ header {
   }
   .scrolling-text {
     font-size: 15px;
-    letter-spacing:2px;
+    
   }
 }
 
@@ -164,11 +167,11 @@ header {
     top:76px;
   }
   .scrolling-text {
-    font-size: 12.5px;
-    letter-spacing: 2px;
+    font-size: 14px;
+    letter-spacing: 5px;
+    margin-top:2px;
   }
 }
-
 
 
 /* ===== PHOTO BANNER ===== */
